[package]
name = "neural_network"
version = "0.1.0"
authors = ["Naymoll <xdarkknight122x@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rand_distr = "0.2.2"
ndarray = { version = "0.13.1", features = ["serde"]}
csv = "1.1.3"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"